# ludo-king-ai

./: .gitignore  README.md  SUMMARY.py  arguments.py  debug_strategy.py  evaluate.py  examples.py  four_player_ppo_tournament.py  four_player_tournament.py  game_state_saver.py  ludo_evaluator.py  main.py  manual_tournament.py  model_training.sh  model_training_multiagent.sh  push_to_hub.py  pyproject.toml  real_move_evaluator.py  requirements.txt  rules.md  setup_multiagent.sh  simulate.py  strategic_tournament.py  test_fix.py  test_multiagent.py  test_rl_architecture.py  test_rl_basic.py  tox.ini  train.py  two_player_ppo_tournament.py  working_demo.py
docs/: BOARD_DESIGN.md  MIND_MAP.md  RISK_OPPORTUNITY_SHAPING.md  TRAINING_PPO_SB3.md
examples/: improved_rl_demo.py  play_with_rl_agent.py  train_rl_agent.py
interface/: app.py  board_viz.py  event_handler.py  game_manager.py  types.py  ui_builder.py
ludo/: __init__.py  board.py  constants.py  game.py  player.py  strategy.py  token.py
ludo_experiments/: results.md
ludo_gr/: app.py  board_viz.py
ludo_interface/: app.py  board_viz.py  event_handler.py  game_manager.py  llm_config_ui.py  models.py  ui_builder.py  utils.py
ludo_profile/: README.md  __init__.py  analyzer.py  classifier.py  metrics.py  models.py  segmentation.py  trace_builder.py
ludo_rl/: README.md  __init__.py  config.py  dqn_model.py  extractor.py  ludo_env.py  maskable_ppo.py  online_env.py  ppo_strategy.py  rl_player.py  state_encoder.py  train.py  train_rllib.py  train_sb3.py  trainer.py  validator.py
ludo_rls/: README.md  __init__.py  ppo_strategy.py  train_rllib.py  train_sb3.py
ludo_tournament/: __init__.py  base_tournament.py  load_ppo_model_base.py  tournament_args.py
rl/: load_ppo_model_base.py  (+2 more)
(+303 files in other folders)
