[project]
name = "ludo-king-ai"
version = "1.0.0"
description = "Modern Ludo engine + reinforcement learning environments + evaluation tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
    "gymnasium[other]>=0.29.0",
    "loguru>=0.7.3",
    "ludo-king-engine>=0.1.3",
    "pettingzoo>=1.24.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "sb3-contrib>=2.7.0",
    "stable-baselines3>=2.3.0",
    "supersuit>=3.9.0",
    "tensorboard>=2.20.0",
    "tox>=4.29.0",
]
