[project]
name = "ludo-king-ai"
version = "1.0.0"
description = "Modern Ludo engine + reinforcement learning environments + evaluation tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.5",
    "llm-output-parser>=0.3.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "sb3-contrib>=2.7.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch-tb-profiler>=0.4.3",
    "tox>=4.32.0",
]
